--- a/booka4.tex
+++ b/booka4.tex
@@ -39,25 +39,24 @@
 \makeindex
 
 \newcommand{\myname}{David~Zimmerer}
-\newcommand{\headtitle}{Spiking Convolutional Deep Belief Networks \\ 
-                        for High Level Feature Extraction }
-\newcommand{\floatingtitle}{Spiking Convolutional Deep Belief Networks for High Level Feature Extraction }
+\newcommand{\headtitle}{Spiking Convolutional Deep Belief Networks for Unsupervised High Level Feature Extraction and Pattern Reconstruction}
+\newcommand{\floatingtitle}{Spiking Convolutional Deep Belief Networks for \\Unsupervised High Level Feature Extraction and \\Pattern Reconstruction}
 \newcommand{\thesistype}{Master thesis}
 
-\newcommand{\reviewerone}{Prof.~Dr.--Ing.~J.~M.~Zöllner}
-\newcommand{\reviewertwo}{Prof.~Dr.--Ing.~R.~Dillmann}
-\newcommand{\advisor}{Dipl.--Inform.~Max~Mustermann}
+\newcommand{\reviewerone}{Prof.~Dr.--Ing.~R.~Dillmann}
+\newcommand{\reviewertwo}{Prof.~Dr.--Ing.~J.~M.~Zöllner}
+\newcommand{\advisor}{M.~Sc.~Jacques~Kaiser}
 
-\newcommand{\timestart}{XX. Monat 20XX}
-\newcommand{\releaseyear}{2016}
-\newcommand{\timeend}{XX. Monat \releaseyear}
-\newcommand{\releasemonth}{in Monat \releaseyear}
+\newcommand{\timestart}{06. July 2016}
+\newcommand{\releaseyear}{2017}
+\newcommand{\timeend}{05. January \releaseyear}
+\newcommand{\releasemonth}{in January \releaseyear}
 
 
 % Names of the organizations
 \newcommand{\department}{\iflanguage{english}{Department of Computer Science}
                                              {Fakultät für Informatik}}
-\newcommand{\institute}{\iflanguage{english}{Institute for Anthropomatics}
+\newcommand{\institute}{\iflanguage{english}{Institute for Anthropomatics and Robotics}
                                             {Institut für Anthropomatik}}
 \newcommand{\fzidepartment}{Abteilung Technisch Kognitive Assistenzsysteme}
 \newcommand{\fziname}{\iflanguage{english}{FZI Research Center for Information Technology}
