--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -31,7 +31,7 @@
 
 @misc{boltzImg,
   title = {Boltzmann Machines},
-  howpublished = {\url{http://gorayni.blogspot.de/2014/06/boltzmann-machines.html},
+  howpublished = {\url{http://gorayni.blogspot.de/2014/06/boltzmann-machines.html}},
   note = {Accessed: 2016-11-22}
 }
 
@@ -71,6 +71,21 @@
 @inproceedings{heikoMA,
 author = {Heiko Donat},
 title = {{Towards Grasping with Spiking Neural Networks for an Anthropomorphic Robot Hand.}}
+}
+
+@article{DBLP:journals/corr/KheradpishehGTM16,
+  author    = {Saeed Reza Kheradpisheh and
+               Mohammad Ganjtabesh and
+               Simon J. Thorpe and
+               Timoth{\'{e}}e Masquelier},
+  title     = {STDP-based spiking deep neural networks for object recognition},
+  journal   = {CoRR},
+  volume    = {abs/1611.01421},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1611.01421},
+  timestamp = {Thu, 01 Dec 2016 19:32:08 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KheradpishehGTM16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 
