--- a/content/exp.tex
+++ b/content/exp.tex
@@ -1027,7 +1027,7 @@ The convolutional RBM is defined by $10$ filters of size $14 \times 14$.
 The association RBM layer has 10 hidden units (see Fig. \ref{fig:pokerdbnarch} for the architecture).
 Each layer is trained with $200$ samples drawn randomly from the training set.
 The resulting filters can be seen in Fig \ref{fig:pokerw}.
-To evaluate the extracted features, we show a reconstruction and completion of the input data (see Fig \ref{fig:pokerrecon} \& \ref{fig:pokercompl}) and determine the classification performance. 
+To evaluate the extracted features, we show a reconstruction and completion of the input data (see Fig \ref{fig:pokerrecon} - \ref{fig:pokercompl}) and determine the classification performance. 
 The trained DBN reaches a peak performance of $94 \%$ on the training set (see Fig \ref{fig:poker_err}).
 
 
@@ -1070,44 +1070,44 @@ The trained DBN reaches a peak performance of $94 \%$ on the training set (see F
 	\centering
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img5.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img5.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img3.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img3.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img1.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img1.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img7.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img7.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	
 	
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img6.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img6.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img4.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img4.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img2.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img2.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/recon_img8.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img8.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\caption[Positive phase and negative phase in the first layer of the DBN of after training on the Poker-DVS dataset.]{Positive phase and negative phase in the first layer of the DBN of after training on the Poker-DVS dataset. The reconstruction of each class is nearly perfect indicating, the DBN has learned the basic structure of the data.}
@@ -1120,47 +1120,96 @@ The trained DBN reaches a peak performance of $94 \%$ on the training set (see F
 	\centering
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl11.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl11.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl21.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl21.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl31.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl31.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl41.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl41.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	
 	
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl12.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl12.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl22.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl22.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl32.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl32.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.25\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/poker/compl42.png}
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl42.png}
   		\label{fig:sub1}
 	\end{subfigure}%
 	\caption[Completion of partially presented input data of the Poker-DVS dataset.]{Completion of partially presented input data of the Poker-DVS dataset. As input data, the bottom half of the image data was omitted. After training, the DBN was able to reconstruct and complete some parts of the input data.}
+	\label{fig:pokercompl}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl13.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl23.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl33.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl43.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	
+	
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl14.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl24.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl34.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\begin{subfigure}{.25\textwidth}
+  		\centering
+  		\includegraphics[width=.6\linewidth]{imgs/poker/compl44.png}
+  		\label{fig:sub1}
+	\end{subfigure}%
+	\caption[Completion of partially presented input data of the Poker-DVS dataset.]{Completion of partially presented input data of the Poker-DVS dataset. As input data, the right half of the image data was omitted. After training, the DBN was able to reconstruct and complete some parts of the input data.}
 	\label{fig:pokercompl}
 \end{figure}
 
