--- a/content/soa.tex
+++ b/content/soa.tex
@@ -98,7 +98,7 @@ This drives the activity in a block to be sparse and likely only one or none uni
 
 \section{Sampling in SNNs} \label{c:snnsampling}
 
-Indicated by stochastic neural transitions found in the brain in experimental studies, a new way of information encoding in the brain as representations of probability distributions and probabilistic interference has been suggested \cite{lee2003hierarchical}\cite{yang2007probabilistic}\cite{griffiths2008bayesian}.
+Indicated by stochastic neural transitions found in the brain in experimental studies, a new way of information encoding in the brain as representations of probability distributions and probabilistic interference has been suggested \cite{griffiths2008bayesian}\cite{lee2003hierarchical}\cite{yang2007probabilistic}.
 
 
 A first framework which proposed how spiking neurons can perform MCMC sampling was introduced by Buesing \cite{Buesing2011}.
