--- a/preface/abstract.tex
+++ b/preface/abstract.tex
@@ -1,7 +1,16 @@
 
 \abstract
 
-Agnisim ad te diamcon sectet, voloborper aciduis nonsequamet, sequisciduis nonum irilit ea feugait, sequat vero er ip exero odipit lobore magnit nos nibh ex esed exerciduisi tat. Consed et  inci tet aci et atem in ut velenim vent ullum exeril ut laore molorpe riliscidunt la con ulputat ad digna feum quismolesto dolortisl ea feuguercil delit praessim ver ad tem ipit, velit, conse
-enis nonsed mod tincipit augue veniametuer aut vulput nonsed molesse miniatuercin hendit in henibh etumsan velessi.
-It verilluptat adiatie vel ullum il dolorem zzriuscing et pratinit wis acilismodit adions ad magna autat ulput adip eum do eu faci tem ver ipis at augue ming erit wiscillan hent iliquisl ullam ecte delent ent adiam zzrit aliqui tie volorem inibh essequip enis nullaore vent ametum vullam, velese vullametue verit, sit ex er il ute dolortio commy nos el utat. 
-Nons dolore voloborper sed magnit enisisi. Onsenit digna facip ex eraestin ulla consequatie do cons nulla feugiat. Bor irilla feuguer cipsum er autpat. Duis ad minciliquat. Er sis autat ut wis dolorper adion hendre ver sequate molore etuerci exeros nonulla consectet lorpera essequiscip ectet, suscil el utpat luptatum velis nulla...
+Extracting high level features in data automatically can benefit various tasks such as classification and prediction. 
+Deep belief networks allow to build feature extractors in an unsupervised manner. 
+Utilizing a convolutional multilayered architecture can further improve the quality of the features on compositional data and allow a more abstract representation. 
+Most architecture perform operations in discrete time steps and do not utilize a continuous information processing similar to the brain, which could lead to faster response times and a lower power consumption. 
+In this thesis we propose different biologically inspired architectures to build and train a spiking deep belief network with a convolutional architecture. 
+Two different training algorithms are presented.
+One trains the network in discrete time steps and the resulting network is afterwards transformed into a spiking neural network.
+Another approach trains a spiking network directly with an adapted spike time dependent plasticity learning rule and weight synchronization.
+Both algorithms are evaluated on different discrete and event-based datasets.
+On the different datasets the algorithms are able to discriminate classes with high accuracy without any modification of the learning rules, thus indicating a generalizable feature extraction algorithm.
+By comparing both approaches it becomes apparent that by introducing lateral inhibitory connections the directly trained algorithm is able to extract more discriminative features.
+ 
+\chapter*{Abstrakt}
